Implementación de un nuevo sistema de servidor para la aplicación, incluyendo la creación de archivos de configuración y scripts para la construcción. Se mejora la gestión de grupos en la interfaz de usuario y se optimiza la detección del ejecutable de Node.js en entornos empaquetados. Se añaden nuevas funcionalidades para la extracción de números de grupos de WhatsApp y se implementan verificaciones de construcción.

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -128,14 +128,14 @@
         <!-- Convertir a menús desplegables -->
         <div class="action-dropdown" id="extract-dropdown">
           <div class="action-dropdown-header">
-            <i class="fas fa-download"></i>
-            <span>Extraer Números</span>
+            <i class="fas fa-users"></i>
+            <span>Extraer de Grupos</span>
             <i class="fas fa-chevron-down"></i>
           </div>
           <div class="action-dropdown-content">
-            <p>Extrae números del grupo abierto en WhatsApp Web</p>
+            <p>Carga grupos de WhatsApp y extrae números de participantes</p>
             <button id="extractBtn" class="btn green">
-              <i class="fas fa-download"></i> Extraer Números
+              <i class="fas fa-download"></i> Cargar Grupos
             </button>
             <div id="group-info" class="group-info"></div>
           </div>
